# rk3588-clk

./: .vscode-ctags  Cargo.toml  README.md
.github/workflows/: release.yml
platform/: evm3588.dtb
src/: autocs.rs  clksel.rs  constant.rs  gate.rs  lib.rs  npu.rs  pll.rs  regs_gen.rs  softrst.rs  usb.rs
tests/: test.rs
