[package]
edition = "2024"
name = "rk3588-clk"
version = "0.1.1"

[dependencies]
log = "0.4"
tock-registers = "0.10"

[dev-dependencies]
bare-test = "0.7"
sdmmc = { git = "https://github.com/YanQD/sdmmc.git" }
rockchip-pm = "0.4"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
    